[package]
name = "doe"
version = "0.1.0"
authors = ["Laurent Teva Fourrier <ltfourrier@gmail.com>"]
description = "A package manager for configuration files"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
